# conj-bot-test

./: README.md  main.py  page_source.html  pyproject.toml  table.csv
.cache/replit/: __replit_disk_meta.json
